# uti-messages

./: CMakeLists.txt  LICENSE  package.xml
action/: VehiclesRequest.action
msg/: Ready.msg  Speed.msg  TrajectoryCommand.msg  TrajectoryPoint.msg  VehicleID.msg  VehicleIDs.msg  VehicleState.msg  VehicleStateList.msg
srv/: CollectedVehicleStateList.srv  LabProperties.srv  MapDefinition.srv  MapRequest.srv  NeededVehicles.srv  ScaleRegistration.srv  StoredTrajectoryCommand.srv  TestbedCharacteristics.srv
